--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "input-otp": "1.4.1",
     "lenis": "^1.3.4",
     "lucide-react": "^0.454.0",
+    "luxon": "^3.6.1",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
