fix padding bottom testimonials and add google analytics && change node version from 23 to 22 (lts)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@next/third-parties": "^15.5.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
